[gd_scene load_steps=7 format=3 uid="uid://ccdohvwqd23c5"]

[ext_resource type="Texture2D" uid="uid://b2b10hyb0kk4d" path="res://Assets/Actors/objects/swordplaceholder.png" id="1"]
[ext_resource type="Script" path="res://Scripts/Actors/Objects/chargeswordattack.gd" id="2"]

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(112.5, 18)

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="1"]
resource_name = "attk"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(600, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vai10"]
_data = {
"RESET": SubResource("2"),
"attk": SubResource("1")
}

[node name="LanceAttack" type="Marker2D"]
scale = Vector2(2, 1)
script = ExtResource("2")

[node name="Sword" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
input_pickable = false

[node name="Swordplaceholder" type="Sprite2D" parent="Sword"]
position = Vector2(64.5, 0.5)
texture = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword"]
position = Vector2(63.25, 1)
rotation = 3.14159
shape = SubResource("3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sword/Swordplaceholder")
libraries = {
"": SubResource("AnimationLibrary_vai10")
}
autoplay = "RESET"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="area_entered" from="Sword" to="." method="_on_Sword_area_entered"]
[connection signal="body_entered" from="Sword" to="." method="_on_Sword_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
